fixed button on mobile & text size based on length

--- a/client/main.css
+++ b/client/main.css
@@ -1,5 +1,7 @@
 html, body, #react-target, #react-target>div {
   height: 100%;
+  width: 100%;
+  position: fixed;
   font-family: 'PT Sans Narrow', sans-serif;
   font-size: 24px;
   color: black; 
