--- a/imports/ui/Layouts/Mobile/Mobile.scss
+++ b/imports/ui/Layouts/Mobile/Mobile.scss
@@ -1,8 +1,8 @@
 @import '../../assets/main';
 
 .mobile-main {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   color: $dynamic-black;
   // display: grid;
   // grid-template-areas: 'navbar'
@@ -89,6 +89,7 @@
   }
 
   .content {
+    height: 70%;
     grid-area: content;
     display: flex;
     flex-direction: column;
@@ -109,10 +110,11 @@
   }
 
   .footer {
-    grid-area: footer;
+    position: fixed;
+    bottom: 0;
     display: flex;
-    height: 15vh;
-    width: 100vw;
+    height: 15%;
+    width: 100%;
   }
 
 }
